--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,11 +3,17 @@ Title: Provide Tours of 'Shiny' Applications
 Version: 1.0.3
 Date: 2020-08-03
 Authors@R: 
+  c(
     person(given = "John",
            family = "Coene",
            role = c("aut", "cre"),
            email = "jcoenep@gmail.com",
-           comment = c(ORCID = "0000-0002-6637-4107"))
+           comment = c(ORCID = "0000-0002-6637-4107")),
+    person(given = "Etienne", 
+           family = "Bacher", 
+           role = "ctb", 
+           email = "etienne.bacher@orange.fr")
+  )
 Description: Provide step by step guided tours of 'Shiny' applications.
 License: MIT + file LICENSE
 Encoding: UTF-8
