--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -6,3 +6,10 @@
 ^cran-comments\.md$
 .vscode
 ^CRAN-RELEASE$
+^srcjs$
+^node_modules$
+^package\.json$
+^package-lock\.json$
+^webpack\.dev\.js$
+^webpack\.prod\.js$
+^webpack\.common\.js$
