--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
   },
   "homepage": "https://github.com/JohnCoene/cicerone#readme",
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "css-loader": "^5.2.7",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "style-loader": "^3.1.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "driver.js": "^0.9.8"
+    "driver.js": "^1.0.1"
   }
 }
