--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     R6,
     shiny,
     htmltools,
-    assertthat
+    assertthat,
+    purrr (>= 1.0.2)
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 URL: https://cicerone.john-coene.com/
