--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,8 @@ Imports:
     shiny,
     htmltools,
     assertthat,
-    purrr (>= 1.0.2)
+    purrr (>= 1.0.2),
+    snakecase (>= 0.11.1)
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
 URL: https://cicerone.john-coene.com/
