--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "driver.js": "^1.3.1"
+    "driver.js": "^1.3.1",
+    "traverse": "^0.6.9"
   }
 }
